--- a/ui/index.html
+++ b/ui/index.html
@@ -12,20 +12,15 @@
 <body>
 
 
-    <!-- Add New Component JS Above -->
     <div>
         <div id="content" class="container">
-            <div class="row">
-                <div ui-view>
-                </div>
+            <div class="row" ui-view>
             </div>
         </div>
     </div>
 
 </body>
 
-<!-- Main App JS -->
-<script src="app.js"></script>
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
@@ -33,6 +28,8 @@
 <!-- JS from Bower Components -->
 <script src="bower_components/less.js/dist/less.js" data-concat="false"></script>
 <script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/jquery-resize/jquery.ba-resize.js"></script>
+<script src="bower_components/popper.js/dist/umd/popper.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/lodash/dist/lodash.js"></script>
 <script src="bower_components/moment/moment.js"></script>
@@ -43,5 +40,15 @@
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/font-awesome/js/all.js"></script>
 <!-- Add New Bower Component JS Above -->
+
+
+<!-- Main App JS -->
+<script src="app.js"></script>
+<script src="partial/editor/editor.js"></script>
+<script src="service/dashboardService.js"></script>
+<script src="service/deviceTypeService.js"></script>
+<script src="directive/dashboardCanvas/dashboardCanvas.js"></script>
+<script src="service/widgetService.js"></script>
+<!-- Add New Component JS Above -->
 
 </html>
