Initial configuration of widgets

--- a/ui/index.html
+++ b/ui/index.html
@@ -49,6 +49,7 @@
 <script src="service/deviceTypeService.js"></script>
 <script src="directive/dashboardCanvas/dashboardCanvas.js"></script>
 <script src="service/widgetService.js"></script>
+<script src="service/entityService.js"></script>
 <!-- Add New Component JS Above -->
 
 </html>
