--- a/ui/directive/dashboardCanvas/dashboardCanvas.html
+++ b/ui/directive/dashboardCanvas/dashboardCanvas.html
@@ -1,4 +1,4 @@
-<div class="dashboard-canvas border-primary">
+<div class="dashboard-canvas border-success">
     <table ng-style="margins">
         <tr ng-repeat="x in [].constructor(rows) track by $index">
             <td ng-repeat="x in [].constructor(columns) track by $index" class="dashboard-grid"></td>
