--- a/ui/index.html
+++ b/ui/index.html
@@ -39,6 +39,8 @@
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="bower_components/font-awesome/js/all.js"></script>
+<script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
+<script src="bower_components/ngFitText/dist/ng-FitText.min.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 
@@ -50,6 +52,7 @@
 <script src="directive/dashboardCanvas/dashboardCanvas.js"></script>
 <script src="service/widgetService.js"></script>
 <script src="service/entityService.js"></script>
+<script src="directive/widgetContent.js"></script>
 <!-- Add New Component JS Above -->
 
 </html>
