--- a/ui/index.html
+++ b/ui/index.html
@@ -41,6 +41,7 @@
 <script src="bower_components/font-awesome/js/all.js"></script>
 <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
 <script src="bower_components/ngFitText/dist/ng-FitText.min.js"></script>
+<script src="bower_components/angular-gridster/src/angular-gridster.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 
