--- a/ui/widgets/clock/clock.html
+++ b/ui/widgets/clock/clock.html
@@ -1,4 +1,4 @@
 <div class="clock">
-    <div class="clock-time" data-fittext>{{time}}</div>
+    <div class="clock-time" data-fittext ng-bind="time">{{time}}</div>
     <div ng-if="config.show_label" data-fittext=".3">{{config.name}}</div>
 </div>
