Initial weather conditions; socket.io for entity state changes

--- a/server/widgets/clock/clock.html
+++ b/server/widgets/clock/clock.html
@@ -1,4 +1,4 @@
-<div class="clock">
+<div class="clock clock-y-{{config.size.y}}">
     <div class="clock-time" data-fittext ng-bind="time">{{time}}</div>
     <div ng-if="config.show_label" data-fittext=".3">{{config.name}}</div>
 </div>
