--- a/ui/directive/dashboardCanvas/dashboardCanvas.html
+++ b/ui/directive/dashboardCanvas/dashboardCanvas.html
@@ -1,4 +1,4 @@
-<div class="border-success">
+<div class="border-success dashboard-canvas">
     <div gridster="gridsterOpts">
         <ul>
             <li gridster-item="customItemMap"
