--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="themes/materia.min.css" id='theme'>
+    <link rel="stylesheet" type="text/css" href="bower_components/mdi/css/materialdesignicons.css">
     <link href="app.less" type="text/css" rel="stylesheet/less">
 </head>
 
@@ -34,6 +35,7 @@
 <script src="bower_components/lodash/dist/lodash.js"></script>
 <script src="bower_components/moment/moment.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -42,6 +44,8 @@
 <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
 <script src="bower_components/ngFitText/dist/ng-FitText.min.js"></script>
 <script src="bower_components/angular-gridster/src/angular-gridster.js"></script>
+<script src="bower_components/socket.io-client/dist/socket.io.js"></script>
+<script src="bower_components/angular-socket-io/socket.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 
@@ -54,6 +58,9 @@
 <script src="service/widgetService.js"></script>
 <script src="service/entityService.js"></script>
 <script src="directive/widgetContent.js"></script>
+<script src="partial/dashboard/dashboard.js"></script>
+<script src="directive/dashboardViewer/dashboardViewer.js"></script>
+<script src="partial/testwidget/testwidget.js"></script>
 <!-- Add New Component JS Above -->
 
 </html>
