Adding background color selection

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
     <link href="app.less" type="text/css" rel="stylesheet/less">
 </head>
 
-<body>
+<body class="dashboard-bg-{{dashbg}}">
 
 
     <div>
