--- a/ui/directive/dashboardCanvas/dashboardCanvas.html
+++ b/ui/directive/dashboardCanvas/dashboardCanvas.html
@@ -5,9 +5,9 @@
                 ng-repeat="item in items">
                 <div class="widget-content-wrapper" ng-mouseover="hoverIn(this.gridsterItem)" ng-mouseleave="hoverOut(this.gridsterItem)">
                     <div class="widget-content-overlay">
-                        <i class="drag-handle fas fa-arrows-alt"></i>
-                        <a class="button button-clear" ng-click="edit(item)"><i class="fas fa-edit"></i></a>
-                        <a class="button button-clear" ng-click="remove(item)"><i class="fas fa-trash"></i></a>
+                        <i class="drag-handle mdi mdi-arrow-all"></i>
+                        <a class="button button-clear" ng-click="edit(item)"><i class="mdi mdi-pencil"></i></a>
+                        <a class="button button-clear" ng-click="remove(item)"><i class="mdi mdi-delete"></i></a>
                     </div>
                     <widget-content type="typeOfItem(item)" config="item" editable="true">
                     </widget-content>
