--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,19 @@
     </div>
 
 </body>
+<script data-concat="false" data-remove="false">
+var fullUrl = window.location;
+var paths = fullUrl.pathname.split('/');
+var basePath = "";
 
+for (var i=0; i < paths.length; ++i) {
+    if (!paths[i].endsWith(".html")) {
+        basePath = basePath + "/" + paths[i];
+    }
+}
+var _baseUrl = window.baseUrl = fullUrl.protocol + "//" + fullUrl.host + basePath;
+var _basePath = basePath;
+</script>
 
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
@@ -41,11 +53,10 @@
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="bower_components/font-awesome/js/all.js"></script>
 <script src="bower_components/oclazyload/dist/ocLazyLoad.js"></script>
 <script src="bower_components/ngFitText/dist/ng-FitText.min.js"></script>
 <script src="bower_components/angular-gridster/src/angular-gridster.js"></script>
-<script src="bower_components/socket.io-client/dist/socket.io.js"></script>
+<script src="bower_components/socket.io-client/dist/socket.io.dev.js"></script>
 <script src="bower_components/angular-socket-io/socket.js"></script>
 <!-- Add New Bower Component JS Above -->
 
@@ -53,15 +64,15 @@
 <!-- Main App JS -->
 <script src="app.js"></script>
 <script src="partial/editor/editor.js"></script>
+<script src="partial/dashboard/dashboard.js"></script>
+<script src="partial/testwidget/testwidget.js"></script>
+<script src="directive/dashboardViewer/dashboardViewer.js"></script>
+<script src="directive/dashboardCanvas/dashboardCanvas.js"></script>
+<script src="directive/widgetContent.js"></script>
 <script src="service/dashboardService.js"></script>
 <script src="service/deviceTypeService.js"></script>
-<script src="directive/dashboardCanvas/dashboardCanvas.js"></script>
 <script src="service/widgetService.js"></script>
 <script src="service/entityService.js"></script>
-<script src="directive/widgetContent.js"></script>
-<script src="partial/dashboard/dashboard.js"></script>
-<script src="directive/dashboardViewer/dashboardViewer.js"></script>
-<script src="partial/testwidget/testwidget.js"></script>
 <!-- Add New Component JS Above -->
 
 </html>
