Preparing for multiple entities

--- a/server/widgets/weather_conditions/weather_conditions.html
+++ b/server/widgets/weather_conditions/weather_conditions.html
@@ -5,6 +5,6 @@
     </div>
     <div class="current-weather-forecast">
         <div>H: {{value.attributes.forecast[0].temperature | number:0}}</div>
-        <div>L: {{value.attributes.forecast[0].templow | number:0}}</div>
+        <div ng-if="value.attributes.forecast[0].templow">L: {{value.attributes.forecast[0].templow | number:0}}</div>
     </div>
 </div>
