--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
 
 
     <div>
-        <div id="content" class="container">
+        <div id="content" class="container-fluid p-0">
             <div class="row" ui-view>
             </div>
         </div>
