--- a/server/widgets/calendar/calendar.html
+++ b/server/widgets/calendar/calendar.html
@@ -1,1 +1,3 @@
-<div ui-calendar="calendarOptions" ng-model="eventSources"></div>
+<div class="calendar-widget-x-{{config.size.x}} calendar-widget-y-{{config.size.y}}">
+    <div ui-calendar="calendarOptions" ng-model="eventSources"></div>
+</div>
