--- a/ui/index.html
+++ b/ui/index.html
@@ -57,6 +57,8 @@ var _basePath = basePath;
 <script src="bower_components/angular-gridster/src/angular-gridster.js"></script>
 <script src="bower_components/socket.io-client/dist/socket.io.dev.js"></script>
 <script src="bower_components/angular-socket-io/socket.js"></script>
+<script src="bower_components/tinycolor/dist/tinycolor-min.js"></script>
+<script src="bower_components/angularjs-color-picker/dist/angularjs-color-picker.min.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 
@@ -72,6 +74,9 @@ var _basePath = basePath;
 <script src="service/deviceTypeService.js"></script>
 <script src="service/widgetService.js"></script>
 <script src="service/entityService.js"></script>
+<script src="directive/customWidgetConfig.js"></script>
+<script src="directive/mdiIconPicker/mdiIconPicker.js"></script>
+<script src="service/calendarService.js"></script>
 <!-- Add New Component JS Above -->
 
 </html>
